# e-cli-gui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: channel_handler.rs  commands.rs  e_handler.rs  funcs.rs  main.rs  type_defs.rs  util_lib.rs
src/type_defs/: api_defs.rs  mod.rs
