[package]
name = "e-cli-gui"
version = "0.3.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = { version = "0.27.2", features = ["serde"] }
egui-toast = "0.13.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
