[package]
name = "e-cli-gui"
version = "0.4.3"
edition = "2021"

[dependencies]
eframe = "0.27.2"
egui = { version = "0.27.2", features = ["serde"] }
egui-toast = "0.13.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.37.0", features = ["full"] }
trash = "4.1.1"

[dependencies.reqwest]
version = "0.12.4"
default-features = false
features = ["json", "rustls-tls"]